feat: add web endpoint to check active configuration
